; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/extr_ecp_mont.c_ec_GFp_mont_field_decode.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/extr_ecp_mont.c_ec_GFp_mont_field_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@EC_F_EC_GFP_MONT_FIELD_DECODE = common dso_local global i32 0, align 4
@EC_R_NOT_INITIALIZED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ec_GFp_mont_field_decode(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %4
  %15 = load i32, i32* @EC_F_EC_GFP_MONT_FIELD_DECODE, align 4
  %16 = load i32, i32* @EC_R_NOT_INITIALIZED, align 4
  %17 = call i32 @ECerr(i32 %15, i32 %16)
  store i32 0, i32* %5, align 4
  br label %26

18:                                               ; preds = %4
  %19 = load i32*, i32** %7, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = call i32 @BN_from_montgomery(i32* %19, i32* %20, i32* %23, i32* %24)
  store i32 %25, i32* %5, align 4
  br label %26

26:                                               ; preds = %18, %14
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i32 @ECerr(i32, i32) #1

declare dso_local i32 @BN_from_montgomery(i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
